--- a/test/fixtures/years.yml
+++ b/test/fixtures/years.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  crop: one
-  year: one
+  year: MyString
 
 two:
-  crop: two
-  year: two
+  year: MyString
